fixed spacing issues with xs/sm cols

--- a/webapp/client/app/main/main.styl
+++ b/webapp/client/app/main/main.styl
@@ -781,7 +781,7 @@ span#smallFontSM {
       left: 50%
     }
     .col0, .col2 {
-      margin-top: 480px
+      margin-top: 320px
     }
   }
   #prodCopy {
@@ -913,7 +913,7 @@ span#smallFontSM {
       left: 50%
     }
     .col0, .col2 {
-      margin-top: 480px
+      margin-top: 320px
     }
   }
   #prodCopy {
